tests/NormalTests/paczka2/big_fuzzy/88681180.err
Error in line 1: S354 S354 41,6
Error in line 5: S354 S289 24,5
Error in line 2: pTV0e6N A516 86,1
Error in line 7: pTV0e6N S354 56,8
Error in line 9: pTV0e6N A5 72,1
Error in line 8: CUDJo2Rax2 S354 70,5
Error in line 14: KKK6IM S289 89,3
Error in line 17: pTV0e6N A5 76,6
Error in line 16: KKK6IM A5 51,4
Error in line 35: S354 S354 26,7
Error in line 56: pTV0e6N A5 8,0
Error in line 54: KKK6IM S289 129,7
Error in line 60: S354 S354 40,7
Error in line 67: oSO A516 38,0
Error in line 71: pTV0e6N S354 92,8
Error in line 73: pTV0e6N A5 38,1
Error in line 74: pTV0e6N S354 95,1
Error in line 86: oSO S354 20,2
Error in line 84: CUDJo2Rax2 A5 0,2
Error in line 117: CUDJo2Rax2 A516 29,5
Error in line 114: S354 A5 44,5
Error in line 124: S354 S289 15,8
Error in line 138: pTV0e6N S289 27,1
Error in line 153: oSO A516 67,9
Error in line 160: CukLBj A516 72,0
Error in line 174: pTV0e6N A516 290,6
Error in line 173: CUDJo2Rax2 A5 410,5
Error in line 165: KKK6IM A516 25,5
Error in line 185: S354 A5 6,0
Error in line 191: n8QS7RrGL S354 61,7
Error in line 196: pTV0e6N S289 57,7
Error in line 209: CUDJo2Rax2 S289 55,0
Error in line 217: oSO S289 2,2
Error in line 220: oSO A516 20,8
Error in line 225: CukLBj S354 113,7
Error in line 226: KKK6IM S354 32,0
Error in line 229: KKK6IM A5 54,8
Error in line 231: n8QS7RrGL S289 33,6
Error in line 232: S354 A516 59,0
